Subdividing with overlapping tri and quad crashes Blender #93563

Closed
opened 2021-12-02 05:40:10 +01:00 by Fen · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 2.93.1, branch: master, commit date: 2021-06-22 05:57, hash: 1b8d33b18c
Worked: N/A

Short description of error
Subdividing a mesh with overlapping tri and quad faces, with very specific normals, crashes Blender.

Exact steps for others to reproduce the error

  1. Open the attached subdivide-overlap-crash.blend file
  2. Run the Subdivide operator with these three vertices selected
  3. Crash, due to access violation/segfault.

image.png

subdivide-overlap-crash.blend

Manually recreating the offending mesh does not cause a crash. Manipulating the normals of the offending mesh (e.g. flipping one of the face's normals) prevents the crash. Selecting all four vertices does not cause a crash.

ASan in Blender 3.1.0 reports the following problem:

SUMMARY: AddressSanitizer: access-violation D:\blender-git\blender\source\blender\bmesh\operators\bmo_subdivide.c:1231 in bmo_subdivide_edges_exec

Full error: P2633

My 3.1.0 build is from 78389c021f, if it's important for finding the exact offending line.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 2.93.1, branch: master, commit date: 2021-06-22 05:57, hash: `1b8d33b18c` Worked: N/A **Short description of error** Subdividing a mesh with overlapping tri and quad faces, with very specific normals, crashes Blender. **Exact steps for others to reproduce the error** 1. Open the attached subdivide-overlap-crash.blend file 2. Run the Subdivide operator with these three vertices selected 3. Crash, due to access violation/segfault. ![image.png](https://archive.blender.org/developer/F12677110/image.png) [subdivide-overlap-crash.blend](https://archive.blender.org/developer/F12677123/subdivide-overlap-crash.blend) Manually recreating the offending mesh does not cause a crash. Manipulating the normals of the offending mesh (e.g. flipping one of the face's normals) prevents the crash. Selecting all four vertices does not cause a crash. ASan in Blender 3.1.0 reports the following problem: SUMMARY: AddressSanitizer: access-violation D:\blender-git\blender\source\blender\bmesh\operators\bmo_subdivide.c:1231 in bmo_subdivide_edges_exec Full error: [P2633](https://archive.blender.org/developer/P2633.txt) My 3.1.0 build is from 78389c021f, if it's important for finding the exact offending line.

Added subscriber: @chemicalcrux

Added subscriber: @chemicalcrux
Campbell Barton self-assigned this 2021-12-02 10:00:17 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 4946f0c5a2

This issue was referenced by 4946f0c5a29080a7c632fa859b456c82eb47a26a

This issue was referenced by 490f1648a7

This issue was referenced by 490f1648a78df561614015fa8a1678a789c28af8

This issue was referenced by ef381ffd05

This issue was referenced by ef381ffd05dddda9807fcf50862ee66ba04c0bc9

This issue was referenced by 0f89d05848

This issue was referenced by 0f89d05848b8a279ac6507404dc535244cd73d43

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Thanks for the report, turns out this error is from ~12 years ago.

Thanks for the report, turns out this error is from ~12 years ago.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93563
There is no content yet.