Fix T93563: Crash subdividing with overlapping tri and quad

The first loop was left out when finding the split edge boundary.

Error from f2138686d9d8c105ebf8884774fd7e4d8ff239a1.